[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/textureText.gd" type="Script" id=1]
[ext_resource path="res://fonts/Roboto/Roboto-Black.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )

[node name="drawTexture" type="Node"]
script = ExtResource( 1 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 256, 128 )
render_target_update_mode = 3

[node name="Control" type="Control" parent="Viewport"]
margin_right = 256.0
margin_bottom = 128.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Viewport/Control"]
margin_right = 256.0
margin_bottom = 128.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label1" type="Label" parent="Viewport/Control/ColorRect"]
anchor_left = 0.3125
anchor_top = 0.125
anchor_right = 0.445312
anchor_bottom = 0.40625
rect_pivot_offset = Vector2( -613, 15 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "99"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label2" type="Label" parent="Viewport/Control/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = -48.0
margin_right = -78.0
margin_bottom = -12.0
rect_pivot_offset = Vector2( -613, 15 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 3 )
text = "99"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Viewport/Control/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = 16.0
margin_right = -78.0
margin_bottom = 52.0
rect_pivot_offset = Vector2( -613, 15 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "99"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="Viewport/Control/ColorRect"]
anchor_left = 0.3125
anchor_top = 0.625
anchor_right = 0.445312
anchor_bottom = 0.90625
rect_pivot_offset = Vector2( -613, 15 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "99"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label5" type="Label" parent="Viewport/Control/ColorRect"]
anchor_left = 0.5625
anchor_top = 0.125
anchor_right = 0.695312
anchor_bottom = 0.40625
rect_pivot_offset = Vector2( -613, 15 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "99"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label6" type="Label" parent="Viewport/Control/ColorRect"]
anchor_left = 0.8125
anchor_top = 0.125
anchor_right = 0.945312
anchor_bottom = 0.40625
rect_pivot_offset = Vector2( -613, 15 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "99"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label7" type="Label" parent="Viewport/Control/ColorRect"]
anchor_left = 0.5625
anchor_top = 0.625
anchor_right = 0.695312
anchor_bottom = 0.90625
rect_pivot_offset = Vector2( -613, 15 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "99"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label8" type="Label" parent="Viewport/Control/ColorRect"]
anchor_left = 0.8125
anchor_top = 0.625
anchor_right = 0.945312
anchor_bottom = 0.90625
rect_pivot_offset = Vector2( -613, 15 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "99"
__meta__ = {
"_edit_use_anchors_": true
}
